[package]
name = "evdev-utils"
version = "0.1.0"
authors = ["tone <tony.y.gong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"evdev-rs" = "0.5"
"async-io" = "1.4"
"futures" = "0.3"
"glob" = "0.3"
"thiserror" = "1.0"
